# a2a_streaming

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: __init__.py
agents/billing_agent/: __init__.py  agent.py  graph.py  main.py
agents/booking_agent/: __init__.py  agent.py  graph.py  main.py
agents/intent_agent/: __init__.py  agent.py  intent_detector.py  main.py
common/: __init__.py  a2a_client.py  a2a_protocol.py  a2a_server.py  redis_manager.py
demo/: __init__.py  client.py  web_client.py
docker/: Dockerfile.billing  Dockerfile.booking  Dockerfile.intent
docs/blog/: redis-as-the-streaming-backbone.md
k8s/: billing-agent.yaml  booking-agent.yaml  configmap.yaml  hpa.yaml  intent-agent.yaml  namespace.yaml  redis.yaml  secrets.yaml
scripts/: run_local.sh  test_request.sh
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_intent_detector.py
tests/common/: __init__.py  test_a2a_protocol.py  test_redis_manager.py
